--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "codemirror": "^5.65.18",
     "react": "^18.3.1",
+    "react-codemirror2": "^8.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1"
   },
