--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "codemirror": "^5.65.18",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "framer-motion": "^11.0.3",
+    "mongoose": "^8.13.2",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.1",
     "react-dom": "^18.3.1",
