--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "codemirror": "^5.65.18",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
