--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.2.3",
+    "@codemirror/lang-python": "^6.2.0",
+    "@uiw/codemirror-theme-dracula": "^4.23.11",
+    "@uiw/codemirror-theme-github": "^4.23.11",
+    "@uiw/react-codemirror": "^4.23.11",
     "axios": "^1.9.0",
-    "codemirror": "^5.65.18",
+    "codemirror": "^5.65.19",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.18.2",
     "mongoose": "^8.13.2",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.1",
