--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-codemirror2": "^8.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
