--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ MONGO_URI="mongodb+srv://Ankit:Mongodb@1@cluster0.7ara8xn.mongodb.net/labDb"
 PORT = 5000
 JWT_SECRET="ankit123"
 JWT_EXPIRE="1d"
+
+
+//docker build -t code-execution-env .
